# swagengine

./: Cargo.toml
src/: app.rs  common.rs  main.rs
src/engine/: command_registry.rs  commands.rs  common.rs  mod.rs  state.rs  time.rs  util.rs
src/engine/client/: client.rs  client_chunk.rs  commands.rs  common.rs  constants.rs  mod.rs  state.rs
src/engine/components/: alive.rs  entity.rs  mod.rs
src/engine/server/: biome.rs  chunk.rs  chunk_generator.rs  commands.rs  common.rs  constants.rs  mod.rs  server.rs  world.rs
src/engine/server/data/: mod.rs  schema_definitions.rs
src/engine/server/data/native/dimensions/overworld/: dimension.json
src/engine/server/data/native/dimensions/overworld/biomes/: archipelago.json  desert.json  mountains.json  plains.json  swamp.json  tundra.json
src/engine/server/noise/: common.rs  cpu_noise.rs  gpu_noise.rs  mod.rs  noise_sampler.rs  noise_util.rs
src/engine/shaders/: shader.wgsl
