[package]
name = "WGPU_example"
version = "0.1.0"
edition = "2024"

[features]
client = []
server = []
default = ["client", "server"]

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "25.0.0"
winit = { version = "0.30.8", features = ["android-native-activity"] }
sysinfo = "0.35.2"
bitflags = "2.9.2"
hecs = "0.10.5"
dashmap = "6.1.0"
rayon = "1.11.0"
noise-functions = "0.8.1"
