[package]
name = "WGPU_example"
version = "0.1.0"
edition = "2024"

[features]
client = []
server = []
default = ["client", "server"]

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "26.0.1"
winit = { version = "0.30.8", features = ["android-native-activity"] }
sysinfo = "0.37.0"
bitflags = "2.9.2"
hecs = "0.10.5"
dashmap = "6.1.0"
rayon = "1.11.0"
noise-functions = "0.8.1"
fastrand = "2.3.0"
glam = { version = "0.30.6", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_arrays = "0.2.0"
serde_json = "1.0.145"
bincode = { version = "2.0.0", features = ["serde"] }
bytemuck = { version = "1.23.2", features = [ "derive" ] }
lz4_flex = { version = "0.11", default-features = false }